force-app/main/default/objects/Opportunity/fields/ACV_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>ACV_1st_Year__c</fullName>
    <inlineHelpText>The annual contract value for the first year.</inlineHelpText>
    <label>ACV (1st Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>