force-app/main/default/objects/Opportunity/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add-On</label>
    <type>Checkbox</type>
</CustomField>