force-app/main/default/objects/Opportunity/fields/CSM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CSM_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSM Assigned?</label>
    <type>Checkbox</type>
</CustomField>