force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>If( SBQQ__PrimaryQuote__r.SBQQ__ListAmount__c =0,0,
(SBQQ__PrimaryQuote__r.SBQQ__RegularAmount__c - SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c ) / SBQQ__PrimaryQuote__r.SBQQ__RegularAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>