force-app/main/default/objects/Opportunity/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <formula>IF(SBQQ__RenewedContract__c != &quot;&quot;,SBQQ__RenewedContract__r.SBQQ__Quote__r.SBQQ__NetAmount__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>