force-app/main/default/objects/Opportunity/fields/Implementation_Specialist_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Specialist_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Specialist Assigned?</label>
    <type>Checkbox</type>
</CustomField>