force-app/main/default/objects/Opportunity/fields/Margin_Amt__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amt__c</fullName>
    <inlineHelpText>The total Margin of this opportunity.</inlineHelpText>
    <label>Margin ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>