force-app/main/default/objects/Opportunity/fields/NRR__c.field-meta.xml
<CustomField>
    <fullName>NRR__c</fullName>
    <inlineHelpText>The total Non-Recurring Revenue for the opportunity.</inlineHelpText>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>