force-app/main/default/objects/Opportunity/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <inlineHelpText>The total contract value associated with the opportunity.</inlineHelpText>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>