force-app/main/default/objects/Opportunity/fields/Total_Amount_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Forecast__c</fullName>
    <formula>IF(Amount &gt; 0, Probability * Amount, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount - Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>